# loopextrusion-pytorch

./: .gitignore  Dockerfile  MANIFEST.in  README.md  complete_training_example.ipynb  complete_training_seq_example.ipynb  data_reader_example.ipynb  data_test.ipynb  datareader.py  datareader_w_seq.py  dlem_defaults.env  dlem_training.ipynb  docker-compose.yml  encode_to_contact.ipynb  encode_to_contact_run.ipynb  encode_to_contact_run_patches.py  encode_to_contact_utils.py  environment.yml  netdlem2.py  pyproject.toml  run_encode_to_contact_from_saved.ipynb  util.py
dlem/: __init__.py  attentionpooling.py  ctcf_kernels_jaspar.npy  dataset_dlem.py  dlem.py  dlem_env.yml  dlem_genome.py  feature_extraction.py  head.py  left_right_transformer.py  loader.py  non_loopextrusion_factor_model.py  seq_pooler.py  test.py  train.backup.py  train.py  train_stage2.py  trainer.py  trainer_data.py  trainer_non_loop.py  util.py
dlem/examples/: analysis_of_experiments.ipynb  binomail_loss_example.ipynb  compare_two_data_sets.ipynb  complete_training_example.ipynb  complete_training_example_debugging_new_data.ipynb  complete_training_example_debugging_new_scheme.ipynb  complete_training_example_going_back.ipynb  complete_training_seq_example.ipynb  complete_training_seq_example_attributes.ipynb  complete_training_seq_example_lite.ipynb  cooler_dataset_reader.ipynb  data_reader_example.ipynb  data_test.ipynb  datareader_w_seq_memmap_example.ipynb  datareader_w_seq_memmap_indices_example.ipynb  dataset_dlem_example.ipynb  dlem_pipeline.ipynb  dlem_pipeline_analysis.ipynb  dlem_training.ipynb  extractor_example.ipynb  free_from_stalling.ipynb  train_dlemcoder.ipynb
dlem/examples/DirectFit/: example_patch.ipynb  example_patch_arch_approach.ipynb  single_chr_genome_dlem_brief_analysis.ipynb  test_genome_dlem.ipynb  (+1 more)
dlem/heads/: head.py
dlem/loss/: __init__.py  binomial.py
dlem/models/: attentionpooling.py  dlem_w_stalling.py  dlemcoder.py  dlemcoder_1d.py  encodetocontact.py  encodetocontact_1d_out.py  encodetocontact_forked.py  encodetocontact_forked_diffusion.py  encodetocontact_forked_lite.py  encodetocontact_forked_seq.py  encodetocontact_forked_seq_attention.py  encodetocontact_forked_seq_lite.py  encodetocontact_forked_seq_resconv.py  minimal_dlem.py  netdlem.py  netdlem2.py  seq_pooler.py  stalling_free_form.py
dlem/readers/: datareader.py  datareader_cooler.py  datareader_w_seq.py  datareader_w_seq_memmap.py  datareader_w_seq_memmap_index.py  datareader_w_seq_memmap_index_bw_tracks.py  quality_sampler.py  util.py
dlem/trunks/: conv1d_layers.py  seq_pooler.py
models/: dlem_w_stalling.py  encodetocontact.py  encodetocontact_1d_out.py  encodetocontact_forked.py  encodetocontact_forked_diffusion.py  encodetocontact_forked_seq.py  netdlem2.py
(+25 files in other folders)
