[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DLEM"
version = "0.0.1"
authors = [
  { name="Ali Tugrul Balci", email="alitugrulbalci@gmail.com" },
]
description = "Differentiable loop extrusion model"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/boooooogey/loopextrusion-pytorch"
Issues = "https://github.com/boooooogey/loopextrusion-pytorch/issues"