[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DLEM"
version = "0.0.1"
dependencies = [
  "cooler>=0.10.3",
  "cooltools>=0.7.1",
  "einops>=0.8.1",
  "lightning>=2.5.1",
  "matplotlib>=3.10.1",
  "numpy>=2.2.4",
  "pandas>=2.2.3",
  "pyBigWig>=0.3.24",
  "pyfaidx>=0.8.1.3",
  "pyranges>=0.1.4",
  "torch>=2.6.0",
  "torchtune>=0.6.0",
  "tqdm>=4.67.1",
  "wandb>=0.19.9",
]
authors = [
  { name="Ali Tugrul Balci", email="alitugrulbalci@gmail.com" },
]
description = "Differentiable loop extrusion model"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/boooooogey/loopextrusion-pytorch"
Issues = "https://github.com/boooooogey/loopextrusion-pytorch/issues"

[project.scripts]
DLEM = "dlem:dlem_genome"