[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DLEM"
version = "0.0.1"
dependencies = [
  "numba==0.60.0",
  "colorcet==3.1.0",
  "cooler==0.10.3",
  "cooltools==0.7.1",
  "einops==0.8.1",
  "ipython==8.12.3",
  "jax==0.4.30",
  "lightning==2.4.0",
  "matplotlib==3.10.1",
  "numpy>=1.26.4",
  "pandas==2.2.3",
  "pyBigWig==0.3.24",
  "pyfaidx==0.8.1.1",
  "pyranges==0.1.2",
  "seaborn==0.13.2",
  "seqdataloader==1.2",
  "torch==2.6.0",
  "torchtune==0.5.0",
  "tqdm==4.66.4",
]
authors = [
  { name="Ali Tugrul Balci", email="alitugrulbalci@gmail.com" },
]
description = "Differentiable loop extrusion model"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/boooooogey/loopextrusion-pytorch"
Issues = "https://github.com/boooooogey/loopextrusion-pytorch/issues"

[project.scripts]
DLEM = "dlem:dlem_genome"